[project]
name = "hass-nature-remo"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "homeassistant>=2024.3.3",
    "voluptuous>=0.13.1",
]

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
    "mypy>=1.15.0",
    "pytest>=8.3.5",
    "pytest-cov>=6.0.0",
    "ruff>=0.11.2",
]


[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
addopts = "--base-url http://0.0.0.0:5001"
